Fixed alignment in the testimonial section

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -168,14 +168,14 @@
 }
 
 .testimonialLink {
-  position: absolute;
+  /* position: absolute;
   left: 50%;
-  transform: translateX(-50%);
-  font-size: 1 rem;
+  transform: translateX(-50%); */
+  text-align: center;
+  font-size: 1rem;
   color: #c87941;
   text-decoration: none;
   font-weight: 700;
-  letter-spacing: 0.25px;
   text-transform: uppercase;
 }
 
